# torx_app

./: .dockerignore  .gitignore  CODE_MAP.md  README.md  SECURITY.md  START_LOCAL.ps1  start-docker.bat  stop-docker.bat
backend/: .env.example  pyproject.toml
backend/app/: __init__.py  auth.py  db.py  main.py  secrets.py  settings.py  storage.py
backend/app/routes/: classify.py  dev.py  feedback.py  golden_sets.py  runs.py
docker/: Dockerfile  compose.yml
inventory-photo-kit/: .env.example  .gitignore  README.md  apikey_test  pyproject.toml
inventory-photo-kit/config/: prompts.yaml  settings.yaml
inventory-photo-kit/docs/: CONFIGURATION.md
inventory-photo-kit/examples/: http_dev.py
inventory-photo-kit/src/photosort/: __init__.py  config.py  image_prep.py  labels.py  pipeline.py  reporting.py  vision.py
inventory-photo-kit/src/photosort/features/: __init__.py  phash_dedupe.py
inventory-photo-kit/tests/: test_labels.py
scripts/: start-docker.ps1
web/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
web/scripts/: extract-panels.mjs  gen-useDoneSessionWorkspace.py
web/src/: App.tsx  index.css  vite-env.d.ts
web/src/components/: AppLayout.tsx
web/src/components/inventory/: SorterResultsPanels.tsx  SorterWorkspaceView.tsx
web/src/context/: SorterSessionContext.tsx
web/src/features/inventory-product/: classifyWithRetries.ts  collectFilesFromDrop.ts  collectUploadImages.ts  index.ts  labelGroups.ts  pdfPages.ts  reorderSlots.ts  slotOrderFromClassify.ts
web/src/hooks/: useDoneSessionWorkspace.ts
web/src/lib/: api.ts  auth.ts  downloadSortOutput.ts  inventoryClassify.ts  slotTemplates.ts  uniqueFileName.ts  zipExportNames.ts
web/src/pages/: DevDashboard.tsx  FeedbackPage.tsx  GoldenSets.tsx  ImageSorter.tsx  InventorySlots.tsx  Login.tsx  NotFound.tsx  Settings.tsx
